--- a/EjemploMVC/src/main/java/Presentacion/JPanelJugadorPrincipal.form
+++ b/EjemploMVC/src/main/java/Presentacion/JPanelJugadorPrincipal.form
@@ -22,7 +22,9 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="106" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <Component id="lblAvatar" min="-2" pref="59" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="lblPuntaje" min="-2" max="-2" attributes="0"/>
                   <Component id="lblNombreJugadorPrincipal" min="-2" max="-2" attributes="0"/>
@@ -34,11 +36,16 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="18" max="32767" attributes="0"/>
-              <Component id="lblNombreJugadorPrincipal" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-              <Component id="lblPuntaje" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+              <EmptySpace pref="16" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="lblAvatar" min="-2" pref="59" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="lblNombreJugadorPrincipal" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                      <Component id="lblPuntaje" min="-2" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -65,6 +72,8 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Puntaje: 0000.00"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblAvatar">
     </Component>
   </SubComponents>
 </Form>
