--- a/EjemploMVC/src/main/java/Presentacion/JPantallaJuego.form
+++ b/EjemploMVC/src/main/java/Presentacion/JPantallaJuego.form
@@ -45,14 +45,14 @@
                           <Component id="panelCartaImg" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="panelCartaTexto" min="-2" max="-2" attributes="0"/>
-                              <Component id="panelBotones" min="-2" max="-2" attributes="0"/>
+                              <Component id="panelCartaTexto" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="panelBotones" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="panelJugadoresSecundarios" max="32767" attributes="0"/>
                       </Group>
                       <Component id="panelJugadorPrincipal" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="100" max="32767" attributes="0"/>
-                  <Component id="panelJugadoresSecundarios" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -165,9 +165,9 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                       <Component id="labelNombreCartaActual" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="65" max="32767" attributes="0"/>
+                      <EmptySpace pref="51" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -266,7 +266,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="153" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="247" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
